fixing box alignment & updating game board

--- a/ticTacToe.css
+++ b/ticTacToe.css
@@ -14,7 +14,7 @@ body {
   background-color: #566D7E;
   display: inline-block;
   text-align: center;
-  vertical-align: middle;
+  vertical-align: top;
   font-family: Lucida, monospace;
   margin: 2px;
 }
